--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,7 +16,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql:8.0
+        image: mysql:8
         ports:
           - 3306:3306
         env:
@@ -25,7 +25,7 @@ jobs:
           MYSQL_USER: root
           MYSQL_PASSWORD: ""
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-        options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
+        options: --health-cmd "mysqladmin ping" --health-interval 20s --health-timeout 10s --health-retries 10
 
     steps:
       - uses: actions/checkout@v2
