--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,7 +20,7 @@ jobs:
         ports:
           - 33306:3306
         env:
-          MYSQL_DATABASE: hoge_app
+          MYSQL_DATABASE: example_app
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
         options: --health-cmd "mysqladmin ping" --health-interval 20s --health-timeout 10s --health-retries 10
 
