diff-format is obsoleted

--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -18,4 +18,4 @@ jobs:
           mkdir --parents tools/php-cs-fixer
           composer require --working-dir=tools/php-cs-fixer friendsofphp/php-cs-fixer
       - name: php-cs-fixer
-        run: tools/php-cs-fixer/vendor/bin/php-cs-fixer fix ./ --dry-run --diff --diff-format=udiff --using-cache=no
+        run: tools/php-cs-fixer/vendor/bin/php-cs-fixer fix ./ --dry-run --diff --using-cache=no
